gccida/c2/do_jump_by_parts_equality
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/do_jump_by_parts_equality/src/expr.c:10290:12: error: expected identifier or '('
 struct op = expand_expr( exp->vector.elements, 0LL, VOIDmode, EXPAND_NORMAL); 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/do_jump_by_parts_equality/src/expr.c:10307:31: error: invalid suffix 'orce' on integer constant
v11 = operand_sub*(short *)0xforce( op, v9, ( machine_mode)v6); 
                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/do_jump_by_parts_equality/src/expr.c:10307:47: error: use of undeclared identifier 'machine_mode'
v11 = operand_sub*(short *)0xforce( op, v9, ( machine_mode)v6); 
                                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/do_jump_by_parts_equality/src/expr.c:10307:7: error: use of undeclared identifier 'operand_sub'
v11 = operand_sub*(short *)0xforce( op, v9, ( machine_mode)v6); 
      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/do_jump_by_parts_equality/src/expr.c:10308:31: error: invalid suffix 'orce' on integer constant
v12 = operand_sub*(short *)0xforce( v8, v9, ( machine_mode)v6); 
                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/do_jump_by_parts_equality/src/expr.c:10308:47: error: use of undeclared identifier 'machine_mode'
v12 = operand_sub*(short *)0xforce( v8, v9, ( machine_mode)v6); 
                                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/do_jump_by_parts_equality/src/expr.c:10308:7: error: use of undeclared identifier 'operand_sub'
v12 = operand_sub*(short *)0xforce( v8, v9, ( machine_mode)v6); 
      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/do_jump_by_parts_equality/src/expr.c:10316:12: error: invalid suffix 'xmode' on integer constant
*(short *)0xmode, 
           ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/do_jump_by_parts_equality/src/obj/expr.o] Error 1
